# ai-video-database

./: .env.example  .gitignore  .pre-commit-config.yaml  3TB_VIDEO_ARCHIVE_MASTER_PLAN.md  CONTRIBUTING.MD  LICENSE  LOCAL_TEST_RESULTS.md  LOCAL_VISION_MODELS_RESEARCH.md  README.md  RESET_STATUS.md  TRANSCRIPTION_FEATURE.md  VIDEO_CHAT_QUICK_START.md  VIDEO_CHAT_README.md  edit1_title_sequence.py  main.py  pyproject.toml  requirements.txt  requirements_video_chat.txt  start_video_chat.sh  test_transcription.py  video_chat_server.py
archive/: README.md
archive/original-docs/docs/evals/embeddings/10/: reference.txt
archive/original-docs/docs/evals/embeddings/5/: reference.txt
archive/original-docs/embeddings/vector_db/: meta.json
archive/original-docs/embeddings/vector_db/collection/diffusion_studio_docs/: storage.sqlite
archive/video-editing-examples/: create_highlight_reel.py  edit2_split_screen.py  generate_random_highlights.py  generate_random_highlights_fixed.py  run_simple.py  test_api.py  test_no_feedback.py  test_simple.py
data/: video_chat.db
docs/: 11-tracks.md  12-rendering.md  13-transcript.md  14-events.md  15-keyframe-animations.md  16-masks.md  17-timestamp.md  18-opus-encoder.md  2-opertator-ui.md  3-composition.md  6-text-clip.md  8-html-clip.md
docs/evals/embeddings/1/: answer.txt  reference.txt
docs/evals/embeddings/10/: answer.txt
docs/evals/embeddings/3/: answer.txt
docs/evals/embeddings/4/: reference.txt
docs/evals/embeddings/5/: answer.txt
docs/evals/embeddings/7/: reference.txt
docs/qna/1/: question.txt
docs/qna/10/: question.txt
docs/qna/2/: answer.txt  question.txt  reference.txt
docs/qna/3/: question.txt  reference.txt
docs/qna/4/: answer.txt  question.txt
docs/qna/5/: question.txt
docs/qna/6/: answer.txt  question.txt  reference.txt
docs/qna/7/: answer.txt  question.txt
docs/qna/8/: answer.txt  question.txt  reference.txt
docs/qna/9/: answer.txt  question.txt  reference.txt
embeddings/vector_db/collection/diffusion_studio_docs/: storage.sqlite
python/: config.py  core_tool.py  diffusion_studio.py  diffusiton_studio_tools.py  docs_embedder.py  main.py  prompts.py  utils.py  video_feedback_gemini.py  visual_feedback_tool.py
python/docs/: content_hash.txt
src/: __init__.py  client.py  main.py  prompts.py  settings.py  utils.py
src/docs/: content_hash.txt
src/models/: database.py
src/services/: audio_transcription.py  video_embeddings.py  video_processor.py
src/tools/: __init__.py  docs_search.py  video_analyzer.py  video_editor.py  visual_feedback.py
src/utils/: cost_calculator.py
static/: app.js  index.html
