[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.0",
    "ftfy>=6.3.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=1.60.2",
    "playwright>=1.49.1",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.13.2",
    "rich>=13.9.4",
    "ruff>=0.9.3",
    "smolagents>=1.5.1",
    "tqdm>=4.67.1",
]
