[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.45.2",
    "anyio==4.8.0",
    "beautifulsoup4==4.12.3",
    "certifi==2024.12.14",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "distlib==0.3.9",
    "distro==1.9.0",
    "duckduckgo-search==7.3.0",
    "filelock==3.17.0",
    "fsspec==2024.12.0",
    "ftfy==6.3.1",
    "greenlet==3.1.1",
    "grpcio==1.70.0",
    "grpcio-tools==1.70.0",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.28.0",
    "hyperframe==6.1.0",
    "identify==2.6.6",
    "idna==3.10",
    "jinja2==3.1.5",
    "jiter==0.8.2",
    "loguru==0.7.3",
    "lxml==5.3.0",
    "markdown-it-py==3.0.0",
    "markdownify==0.14.1",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "nodeenv==1.9.1",
    "numpy==2.2.2",
    "openai==1.60.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "playwright==1.49.1",
    "portalocker==2.10.1",
    "pre-commit==4.1.0",
    "primp==0.11.0",
    "protobuf==5.29.3",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyee==12.0.0",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "pywin32==308 ; sys_platform == 'win32'",
    "pyyaml==6.0.2",
    "qdrant-client==1.13.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "ruff==0.9.3",
    "setuptools==75.8.0",
    "six==1.17.0",
    "smolagents==1.6.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "virtualenv==20.29.1",
    "wcwidth==0.2.13",
    "win32-setctime==1.2.0 ; sys_platform == 'win32'",
]
